[package]
name = "lithe-cli"
version = "0.0.3"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "A cli of lithe"
documentation = "https://gitlab.com/grauwoelfchen/lithe"
repository = "https://gitlab.com/grauwoelfchen/lithe"
homepage = "https://gitlab.com/grauwoelfchen/lithe"
readme = "README.md"
keywords = ["cli", "text"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
exclude = [
  "test/*",
  "Makefile",
]
edition = "2018"

[badges]
gitlab = { repository = "grauwoelfchen/lithe", branch = "trunk" }

[[bin]]
name = "lithe"
doc = false
path = "src/main.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
lithe = "0.0.3"
# lithe = { path = "../lithe" }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
