[package]
name = "lithe"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "A Slim template engine by using Pest"
documentation = "https://gitlab.com/grauwoelfchen/lithe"
repository = "https://gitlab.com/grauwoelfchen/lithe"
homepage = "https://gitlab.com/grauwoelfchen/lithe"
readme = "README.md"
keywords = ["cli", "text"]
categories = ["command-line-interface", "text-processing"]
license = "Apache-2.0"
exclude = ["test/*"]
edition = "2018"

[badges]
gitlab = { repository = "grauwoelfchen/lithe", branch = "master" }

[lib]
name = "lithe"
path = "src/lib.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
