[package]
name = "lithe"
version = "0.0.2"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "A Slim template engine by using Pest"
documentation = "https://gitlab.com/grauwoelfchen/lithe"
repository = "https://gitlab.com/grauwoelfchen/lithe"
homepage = "https://gitlab.com/grauwoelfchen/lithe"
readme = "README.md"
keywords = ["cli", "text"]
categories = ["command-line-interface", "text-processing"]
license = "Apache-2.0"
exclude = ["test/*"]
edition = "2018"

[badges]
gitlab = { repository = "grauwoelfchen/lithe", branch = "master" }

[lib]
name = "lithe"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
pest = "2.4.1"
pest_derive = "2.1.0"
